k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ficsitmonitor
  labels:
    app.kubernetes.io/name: ficsitweb
    app.kubernetes.io/instance: ficsitmonitor
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: ficsit-monitor
