k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ficsitweb
  namespace: ficsitmonitor
  labels:
    app: ficsitweb
    app.kubernetes.io/name: ficsitweb
    app.kubernetes.io/instance: ficsitmonitor
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app: ficsitweb
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
